Fix specificity bug and increase menu bg contrast

--- a/v3/src/js/views/components/ColorPicker.scss
+++ b/v3/src/js/views/components/ColorPicker.scss
@@ -1,6 +1,6 @@
 @import '~styles/utils/modules-entry';
 
-$background-color: #f6f6f6;
+$background-color: #e9e9e9;
 $size: 1.5rem;
 $padding: 0.3rem;
 $margin-bottom: 0.15rem;
@@ -35,7 +35,7 @@ $arrow-height: 1.5rem;
   margin-left: -$width/2 + $arrow-width/2 + 0.15rem;
   border-radius: 5px;
   background: $background-color;
-  box-shadow: 0 6px 13px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.14), 0 1px 2px rgba(0, 0, 0, 0.24);
 
   // arrowtip
   &::before {
