--- a/v3/src/js/views/timetable/TimetableModulesTable.scss
+++ b/v3/src/js/views/timetable/TimetableModulesTable.scss
@@ -1,4 +1,4 @@
-@import './_variables.scss';
+@import "~styles/utils/modules-entry.scss";
 
 .modulesTable {
   font-size: 0.9rem;
@@ -26,12 +26,12 @@
 .moduleActionButtons {
   float: right;
   margin-left: 0.2rem;
-}
 
-@include media-breakpoint-up(md) {
-  .moduleAction {
-    padding: 0.5rem;
-    border: 0;
-    border-radius: 0;
+  @include media-breakpoint-up(md) {
+    .moduleAction {
+      padding: 0.5rem;
+      border: 0;
+      border-radius: 0;
+    }
   }
 }
